--- a/src/main/java/vista/Docentes.fxml
+++ b/src/main/java/vista/Docentes.fxml
@@ -22,20 +22,15 @@
                   <ColumnConstraints hgrow="ALWAYS" maxWidth="-Infinity" prefWidth="100.0" />
                   <ColumnConstraints hgrow="NEVER" />
                   <ColumnConstraints hgrow="ALWAYS" maxWidth="1.7976931348623157E308" />
-                  <ColumnConstraints hgrow="NEVER" />
-                  <ColumnConstraints hgrow="ALWAYS" />
+                  <ColumnConstraints hgrow="ALWAYS" maxWidth="1.7976931348623157E308" minWidth="10.0" prefWidth="100.0" />
               </columnConstraints>
               <rowConstraints>
                 <RowConstraints minHeight="-Infinity" prefHeight="30.0" vgrow="NEVER" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="NEVER" />
                   <RowConstraints fillHeight="false" vgrow="NEVER" />
               </rowConstraints>
                <children>
                   <Label text="Legajo" GridPane.halignment="CENTER" GridPane.hgrow="NEVER" GridPane.valignment="CENTER">
-                     <GridPane.margin>
-                        <Insets left="10.0" />
-                     </GridPane.margin>
-                  </Label>
-                  <Label text="Nombre" GridPane.columnIndex="4" GridPane.halignment="CENTER" GridPane.hgrow="NEVER" GridPane.valignment="CENTER">
                      <GridPane.margin>
                         <Insets left="10.0" />
                      </GridPane.margin>
@@ -45,12 +40,17 @@
                         <Insets left="10.0" right="10.0" />
                      </GridPane.margin>
                   </TextField>
-                  <TextField editable="false" focusTraversable="false" mouseTransparent="true" GridPane.columnIndex="5">
+                  <TextField editable="false" focusTraversable="false" mouseTransparent="true" GridPane.columnIndex="3">
                      <GridPane.margin>
                         <Insets left="10.0" right="10.0" />
                      </GridPane.margin>
                   </TextField>
-                  <TextField editable="false" focusTraversable="false" mouseTransparent="true" GridPane.columnIndex="3">
+                  <Label text="Nombre" GridPane.columnIndex="2" GridPane.rowIndex="1">
+                     <GridPane.margin>
+                        <Insets left="10.0" />
+                     </GridPane.margin>
+                  </Label>
+                  <TextField editable="false" focusTraversable="false" mouseTransparent="true" GridPane.columnIndex="3" GridPane.rowIndex="1">
                      <GridPane.margin>
                         <Insets left="10.0" right="10.0" />
                      </GridPane.margin>
@@ -60,24 +60,34 @@
                         <Insets left="10.0" />
                      </GridPane.margin>
                   </Label>
+                  <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Seleccionar Persona" GridPane.columnIndex="4">
+                     <GridPane.margin>
+                        <Insets left="10.0" right="10.0" />
+                     </GridPane.margin>
+                  </Button>
+                  <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Ver datos personales" GridPane.columnIndex="4" GridPane.rowIndex="1">
+                     <GridPane.margin>
+                        <Insets left="10.0" right="10.0" />
+                     </GridPane.margin>
+                  </Button>
                </children>
                <VBox.margin>
-                  <Insets bottom="10.0" />
+                  <Insets bottom="10.0" top="10.0" />
                </VBox.margin>
             </GridPane>
             <GridPane alignment="BOTTOM_LEFT">
                <children>
-                  <Button contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Buscar" GridPane.columnIndex="1">
+                  <Button contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Buscar">
                      <GridPane.margin>
                         <Insets left="10.0" right="10.0" />
                      </GridPane.margin>
                   </Button>
-                  <Button contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Nuevo" GridPane.columnIndex="2">
+                  <Button contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Nuevo" GridPane.columnIndex="1">
                      <GridPane.margin>
                         <Insets left="10.0" right="10.0" />
                      </GridPane.margin>
                   </Button>
-                  <Button contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Eliminar" GridPane.columnIndex="3">
+                  <Button contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Eliminar" GridPane.columnIndex="2">
                      <GridPane.margin>
                         <Insets left="10.0" right="10.0" />
                      </GridPane.margin>
@@ -96,7 +106,7 @@
                   <Insets bottom="10.0" />
                </VBox.margin>
             </GridPane>
-            <TabPane tabClosingPolicy="UNAVAILABLE">
+            <TabPane prefHeight="448.0" prefWidth="798.0" tabClosingPolicy="UNAVAILABLE">
                <tabs>
                   <Tab closable="false" text="Datos">
                      <content>
@@ -104,7 +114,7 @@
                            <content>
                               <VBox>
                                  <children>
-                                    <BorderPane prefHeight="249.0" prefWidth="780.0" VBox.vgrow="ALWAYS">
+                                    <BorderPane prefHeight="207.0" prefWidth="798.0" VBox.vgrow="ALWAYS">
                                        <top>
                                           <GridPane>
                                              <children>
@@ -134,75 +144,14 @@
                                           </GridPane>
                                        </top>
                                        <center>
-                                          <GridPane alignment="CENTER" vgap="5.0" BorderPane.alignment="CENTER">
+                                          <GridPane alignment="CENTER_LEFT" prefHeight="70.0" prefWidth="778.0" vgap="5.0" BorderPane.alignment="TOP_LEFT">
                                              <children>
-                                                <Label text="Documento" GridPane.rowIndex="1">
-                                                   <GridPane.margin>
-                                                      <Insets right="10.0" />
-                                                   </GridPane.margin>
-                                                </Label>
-                                                <Label text="Fecha de nacimiento" GridPane.rowIndex="2">
-                                                   <GridPane.margin>
-                                                      <Insets right="10.0" />
-                                                   </GridPane.margin>
-                                                </Label>
-                                                <Label text="Dirección" GridPane.rowIndex="3" />
-                                                <Label text="Provincia" GridPane.rowIndex="4">
-                                                   <GridPane.margin>
-                                                      <Insets right="10.0" />
-                                                   </GridPane.margin>
-                                                </Label>
-                                                <TextField GridPane.columnIndex="1" GridPane.rowIndex="4">
-                                                   <GridPane.margin>
-                                                      <Insets left="10.0" right="10.0" />
-                                                   </GridPane.margin>
-                                                </TextField>
-                                                <Label text="Código postal" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.rowIndex="4">
-                                                   <GridPane.margin>
-                                                      <Insets left="20.0" right="10.0" />
-                                                   </GridPane.margin>
-                                                </Label>
                                                 <Label text="Estado" />
                                                 <ComboBox maxWidth="1.7976931348623157E308" GridPane.columnIndex="1">
                                                    <GridPane.margin>
                                                       <Insets left="10.0" right="10.0" />
                                                    </GridPane.margin>
                                                 </ComboBox>
-                                                <ComboBox maxWidth="1.7976931348623157E308" GridPane.columnIndex="1" GridPane.rowIndex="1">
-                                                   <GridPane.margin>
-                                                      <Insets left="10.0" right="10.0" />
-                                                   </GridPane.margin>
-                                                </ComboBox>
-                                                <TextField editable="false" focusTraversable="false" mouseTransparent="true" GridPane.columnIndex="2" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1">
-                                                   <GridPane.margin>
-                                                      <Insets left="10.0" right="10.0" />
-                                                   </GridPane.margin>
-                                                </TextField>
-                                                <DatePicker maxWidth="1.7976931348623157E308" GridPane.columnIndex="1" GridPane.rowIndex="2">
-                                                   <GridPane.margin>
-                                                      <Insets left="10.0" right="10.0" />
-                                                   </GridPane.margin>
-                                                </DatePicker>
-                                                <TextField GridPane.columnIndex="1" GridPane.rowIndex="3">
-                                                   <GridPane.margin>
-                                                      <Insets left="10.0" right="10.0" />
-                                                   </GridPane.margin>
-                                                </TextField>
-                                                <Label layoutX="10.0" layoutY="255.0" text="Localidad" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.rowIndex="3">
-                                                   <GridPane.margin>
-                                                      <Insets right="10.0" />
-                                                   </GridPane.margin>
-                                                </Label>
-                                                <TextField layoutX="148.0" layoutY="251.0" GridPane.columnIndex="3" GridPane.rowIndex="3">
-                                                   <GridPane.margin>
-                                                      <Insets left="10.0" right="10.0" />
-                                                   </GridPane.margin>
-                                                </TextField>
-                                                <TextField layoutX="495.0" layoutY="251.0" GridPane.columnIndex="3" GridPane.rowIndex="4">
-                                                   <GridPane.margin>
-                                                      <Insets left="10.0" right="10.0" />
-                                                   </GridPane.margin>
-                                                </TextField>
                                              </children>
                                              <columnConstraints>
                                                 <ColumnConstraints hgrow="NEVER" />
@@ -211,16 +160,12 @@
                                                 <ColumnConstraints maxWidth="251.0" minWidth="208.0" prefWidth="241.0" />
                                              </columnConstraints>
                                              <rowConstraints>
-                                                <RowConstraints minHeight="-Infinity" prefHeight="30.0" vgrow="SOMETIMES" />
-                                                <RowConstraints minHeight="-Infinity" prefHeight="30.0" vgrow="SOMETIMES" />
-                                                <RowConstraints minHeight="-Infinity" prefHeight="30.0" vgrow="SOMETIMES" />
-                                                <RowConstraints minHeight="-Infinity" prefHeight="30.0" vgrow="SOMETIMES" />
-                                                <RowConstraints minHeight="-Infinity" prefHeight="30.0" vgrow="SOMETIMES" />
+                                                <RowConstraints minHeight="-Infinity" vgrow="SOMETIMES" />
                                                 <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" vgrow="SOMETIMES" />
                                                 <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" vgrow="SOMETIMES" />
                                              </rowConstraints>
                                              <BorderPane.margin>
-                                                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                                                <Insets left="10.0" right="10.0" top="10.0" />
                                              </BorderPane.margin>
                                           </GridPane>
                                        </center>
@@ -230,9 +175,9 @@
                                           <Insets left="10.0" right="10.0" top="10.0" />
                                        </VBox.margin>
                                     </Label>
-                                    <BorderPane prefHeight="200.0" prefWidth="200.0" styleClass="pane-border" stylesheets="@Style.css">
+                                    <BorderPane prefHeight="254.0" prefWidth="798.0" styleClass="pane-border" stylesheets="@Style.css">
                                        <center>
-                                          <TableView minHeight="-Infinity" prefHeight="150.0" BorderPane.alignment="CENTER">
+                                          <TableView minHeight="-Infinity" prefHeight="194.0" prefWidth="774.0" BorderPane.alignment="CENTER">
                                             <columns>
                                               <TableColumn minWidth="-1.0" prefWidth="-1.0" text="Título" />
                                               <TableColumn prefWidth="108.0" text="Checkbox?" />
@@ -263,52 +208,6 @@
                                                    </GridPane.margin>
                                                 </Button>
                                                 <Button alignment="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Quitar" GridPane.columnIndex="2" GridPane.halignment="CENTER">
-                                                   <GridPane.margin>
-                                                      <Insets left="10.0" right="10.0" />
-                                                   </GridPane.margin>
-                                                </Button>
-                                             </children>
-                                             <BorderPane.margin>
-                                                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                                             </BorderPane.margin>
-                                          </GridPane>
-                                       </top>
-                                    </BorderPane>
-                                    <Label opacity="0.5" styleClass="label-border" stylesheets="@Style.css" text="Contacto">
-                                       <VBox.margin>
-                                          <Insets left="10.0" right="10.0" top="10.0" />
-                                       </VBox.margin>
-                                    </Label>
-                                    <BorderPane prefHeight="200.0" prefWidth="200.0" styleClass="pane-border" stylesheets="@Style.css">
-                                       <center>
-                                          <TableView minHeight="-Infinity" prefHeight="150.0" BorderPane.alignment="CENTER">
-                                             <columnResizePolicy>
-                                                <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-                                             </columnResizePolicy>
-                                             <columns>
-                                                <TableColumn prefWidth="253.0" text="Tipo" />
-                                                <TableColumn prefWidth="523.0" />
-                                             </columns>
-                                          </TableView>
-                                       </center>
-                                       <top>
-                                          <GridPane BorderPane.alignment="CENTER">
-                                            <columnConstraints>
-                                                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                                                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                                            </columnConstraints>
-                                            <rowConstraints>
-                                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                            </rowConstraints>
-                                             <children>
-                                                <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Agregar" GridPane.columnIndex="1" GridPane.halignment="CENTER">
-                                                   <GridPane.margin>
-                                                      <Insets left="10.0" right="10.0" />
-                                                   </GridPane.margin>
-                                                </Button>
-                                                <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Quitar" GridPane.columnIndex="2" GridPane.halignment="CENTER">
                                                    <GridPane.margin>
                                                       <Insets left="10.0" right="10.0" />
                                                    </GridPane.margin>
